deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo-ephemeral-runner
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/warn-version: latest
